# hyperion_std

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: cmake.yml  docs.yml  xmake.yml
cmake/: hyperion_compiler_settings.cmake  hyperion_enable_warnings.cmake
docs/: Doxyfile  conf.py  index.rst  quick_start.rst
include/hyperion/: none.h  variant.h
include/hyperion/detail/: indexed_call.h
include/hyperion/enum/: storage.h
include/hyperion/variant/: storage.h
src/: main.cpp  test_main.cpp
src/test/: variant.h
xmake/: hyperion_compiler_settings.lua
